# madrasvaasi

./: README.md  pyproject.toml
Backend/: db.sqlite3  event_data.csv
Backend/Backend/: settings.py  urls.py
Backend/api/: models.py  serializers.py  urls.py  views.py
Backend/api/migrations/: 0001_initial.py
Backend/events/management/commands/: import_events.py
Frontend/pjt_site/: index.html  package-lock.json  package.json
Frontend/pjt_site/src/: App.jsx  AuthContext.jsx  PrivateRoute.jsx
Frontend/pjt_site/src/components/: Events.jsx  Forum.jsx  Homepage.jsx  Navbar.jsx  Tourism.jsx  login.jsx  signup.jsx  style.css
